# pi-pico-camera

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  main.h
examples/: ImageData.c
lib/Infrared/: CMakeLists.txt  Infrared.c  Infrared.h
